--- a/webs/web-tyb/src/main/resources/static/backstage/login.html
+++ b/webs/web-tyb/src/main/resources/static/backstage/login.html
@@ -37,8 +37,7 @@
                                style="color: #FFFFFF !important; position:absolute; z-index:100" value="123456"
                                type="password" placeholder="请输入密码"/>
                     </div>
-                    <div class="mb2"><a class="act-but submit" href="javascript:;" onclick="login()"
-                                        style="color: #FFFFFF">登录</a></div>
+                    <div class="mb2"><a class="act-but submit" href="javascript:;" onclick="login()" style="color: #FFFFFF">登录</a></div>
                 </form>
                 <!--<%&#45;&#45;onclick="document.getElementById('login').submit();"&#45;&#45;%>-->
             </div>
@@ -79,7 +78,7 @@
             async: false,
             type: "POST",
             dataType: "json",
-            url: "/test/test2",
+            url: "/login",
             data: $('#login').serialize(),
             success: function (data) {
                 if (data.statusCode == '200') {
